[package]
name = "solana_swap"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"]}
anchor-spl = { version = "0.29.0", features = ["associated_token"] }
solana_vault = { path = "../solana_vault", features = ["cpi"] }

[lib]
crate-type = ["cdylib", "lib"]
